fix: fixed corse configuration